deployment/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: toolbox
  labels:
    registry: "oci"
