deployment/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    app: toolbox
spec:
  type: NodePort
  selector:
    app: toolbox
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
